Bug 440681 - Currency list not sorted with locale awareness in the new account wizard
Summary: Currency list not sorted with locale awareness in the new account wizard
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.8
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-08-07 07:46 UTC by antoine
Modified: 2021-08-08 14:38 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description antoine 2021-08-07 07:46:40 UTC
SUMMARY

Stocks appear in the currency list when creating a new account

Currencies are not sorted correctly

STEPS TO REPRODUCE
0. open a kmy file with few stocks already configured
1. account > new account then next
2. look at the currencies in the currency combobox 
3. 

OBSERVED RESULT

Issue 1 : Stocks appear in the currency list
Issue 2 : currency are not sorted correctly by country alphabetical order for countries starting with a letter with an accent (in French UI, Égypte appear after Zimbabwe for example)

EXPECTED RESULT

Only currency should appear

SOFTWARE/OS VERSIONS
xubuntu 20.04

ADDITIONAL INFORMATION
Comment 1 Thomas Baumgart 2021-08-07 18:50:49 UTC
Please don't throw in two problems into the same bug report.

Issue 1: duplicate of bug 440586
Issue 2: now shown in the title
Comment 2 antoine 2021-08-07 20:41:31 UTC
> Please don't throw in two problems into the same bug report.

Sorry about that.

> Issue 1: duplicate of bug 440586

Issue 1 is not a duplicate of bug 440586, I think it is a mistake

I tried to find the right duplicate on bugs.kde.org but could not find
it 

> Issue 2: now shown in the title
>
Comment 3 Thomas Baumgart 2021-08-08 06:00:52 UTC
Sorry, I was tricked by my clipboard:

Issue 1: duplicate of bug 439722
Comment 4 Thomas Baumgart 2021-08-08 14:31:48 UTC
Git commit d784555a1bd4724cf45e98e83f526f63d5d94f14 by Thomas Baumgart.
Committed on 08/08/2021 at 14:24.
Pushed by tbaumgart into branch '5.1'.

Sort currencies in locale aware order
FIXED-IN: 5.1.3

M  +1    -1    kmymoney/mymoney/mymoneysecurity.cpp

https://invent.kde.org/office/kmymoney/commit/d784555a1bd4724cf45e98e83f526f63d5d94f14
Comment 5 Thomas Baumgart 2021-08-08 14:38:24 UTC
Git commit 218c70fc548d3f9887e22514d10faae203940a2f by Thomas Baumgart.
Committed on 08/08/2021 at 14:27.
Pushed by tbaumgart into branch 'master'.

Sort currencies in locale aware order

(cherry picked from commit d784555a1bd4724cf45e98e83f526f63d5d94f14)

M  +1    -1    kmymoney/mymoney/mymoneysecurity.cpp

https://invent.kde.org/office/kmymoney/commit/218c70fc548d3f9887e22514d10faae203940a2f