Sort currencies in locale aware order

BUG: 440681
FIXED-IN: 5.1.3